# lerobot-robot-ugo-pro

./: .pre-commit-config.yaml  README.md  pyproject.toml  sample-setup.sh
.github/workflows/: ci.yml
docs/: custom_robot_integration_with_lerobot.md  index.md  lerobot_ugo_pro_design.md  ugo_arm_monitoring_spec.md
lerobot_robot_ugo_pro/: __init__.py  config_ugo_pro.py  ugo_pro.py
lerobot_robot_ugo_pro/configs/: __init__.py  ugo_pro.py
lerobot_robot_ugo_pro/follower/: __init__.py  mapper.py
lerobot_robot_ugo_pro/robots/: __init__.py  ugo_pro_follower.py
lerobot_robot_ugo_pro/telemetry/: __init__.py  frame.py  parser.py
lerobot_robot_ugo_pro/teleop/: __init__.py  config_ugo_bilcon.py  ugo_bilcon.py
lerobot_robot_ugo_pro/transport/: __init__.py  udp_client.py
lerobot_robot_ugo_pro/utils/: __init__.py  time.py
tests/: conftest.py  test_config.py  test_mapper.py  test_parser.py  test_parser_v1_1.py  test_robot.py  test_teleop.py  test_udp_client.py
tools/: ugo_arm_monitor.py  ugo_controller_mock.py
