[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-robot-ugo-pro"
version = "0.1.0"
description = "LeRobot follower implementation for the Ugo Pro humanoid robot"
requires-python = ">=3.9"
authors = [
    { name = "ugo" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.6",
    "typing-extensions>=4.9",
    "lerobot>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.7",
    "ruff>=0.3",
]

[project.entry-points."lerobot.robots"]
ugo_pro = "lerobot_robot_ugo_pro.robots.ugo_pro_follower:UgoProFollower"

[tool.setuptools.packages.find]
exclude = ["tests*"]
