[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_ugo_pro"
version = "0.1.0"
description = "LeRobot follower implementation for the ugo Pro humanoid robot"
requires-python = ">=3.10"
authors = [
    { name = "ugo" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "lerobot>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.7",
    "ruff>=0.3",
]

[project.entry-points."lerobot.robots"]
ugo_pro = "lerobot_robot_ugo_pro.ugo_pro:UgoPro"

[project.urls]
"Homepage" = "https://github.com/ugo-plus/lerobot-robot-ugo-pro"
"Bug Tracker" = "https://github.com/ugo-plus/lerobot-robot-ugo-pro/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.uv.workspace]
members = ["lerobot-robot-dev", "lerobot-robot-dev-env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
